--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,8 @@ main:
     
   - title: "CV"
     url: /cv/
+  - title: "Projects"
+    url: /projects/
 
   - title: "Contact"
     url: /contact/
