--- a/_config.yml
+++ b/_config.yml
@@ -181,9 +181,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-    #portfolio:
-    #  output: true
-    #  permalink: /:collection/:path/
+  projects:
+    output: true
+    permalink: /:collection/:path/
   talks:
     output: true
     permalink: /:collection/:path/
@@ -191,17 +191,17 @@ collections:
 
 # Defaults
 defaults:
-        ## _posts
-        #- scope:
-        #    path: ""
-        #    type: posts
-        #  values:
-        #    layout: single
-        #    author_profile: true
-        #    read_time: true
-        #    comments: true
-        #    share: true
-        #    related: true
+  # _posts
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
   # _pages
   - scope:
       path: ""
