--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "in/tushar-kataria-05a69456/"
+  linkedin         : "tushar-kataria-05a69456"
   orcid            : 
   pinterest        :
   soundcloud       :
