Adding new config file

--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,9 @@ author:
   employer         : "University of Utah"
   pubmed           : 
   googlescholar    : "https://scholar.google.co.in/citations?hl=en&user=Qrs30aYAAAAJ" 
-  email            :
+  email            : tushar9818@gmail.com
   researchgate     : "https://www.researchgate.net/profile/Tushar-Kataria-3"
+  semanticscholar  : "https://www.semanticscholar.org/author/Tushar-Kataria/2074269068"
   uri              :
   bitbucket        :
   codepen          :
@@ -103,7 +104,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "tushar-kataria-05a69456"
-  orcid            : 
+  orcid            : 0000-0002-9469-5266
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
