--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "tushar-kataria-05a69456"
-  orcid            : 0000-0002-9469-5266
+  orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-9469-5266"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
